src/css/base.css
/* ... */
dialog[open] {
  z-index: 2;
  opacity: 1;
  transform: translate3d(0, 0, 0) translate(-50%, -50%);
  pointer-events: all;
}

dialog::backdrop {
  z-index: 1;
  position: fixed;
  inset: 0;
  background: rgba(0, 0, 0, 0.4);
  /* animation: hide-it var(--animate-200, 200ms) linear forwards; */
}

/* dialog[open]::backdrop {
  animation: show-it var(--animate-200, 200ms) linear forwards;
} */

.form-group {
  position: relative;
  padding: 15px 0 0;
  margin: 10px auto 0.5em auto;
  min-width: 19em;
}

input {
  width: 100%;
  border: 0;
  border-bottom: var(--seperator-line);
  outline: 0;
  font-size: 16px;
  color: inherit;
  padding: 7px 0;
  background: transparent;
  transition: border-color var(--animate-200, 200ms) linear;
}

input[disabled] {
  color: var(--disabled-color)
}

input[disabled]~label {
  color: var(--disabled-color)
}

input::placeholder {
  color: transparent;
}

input:placeholder-shown~label {
  font-size: 16px;
  cursor: text;
  top: 1.25em;
}

label,
input:focus~label {
  position: absolute;
  top: 0;
  display: block;
  transition: var(--animate-200, 200ms);
  font-size: 12px;
  color: inherit;
}

input:focus~label {
  color: var(--pop-color);
}

input:focus {
  padding-bottom: 6px;
  border-bottom: 2px solid var(--pop-color);
}

.toast {
  background: #323232;
  padding: 16px;
  display: inline-block;
  font-size: 14px;
  text-align: left;
  position: absolute;
  border-radius: 3px;
  bottom: 8px;
  left: 8px;
  color: #fff;
  z-index: 10;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  min-width: 200px;
  cursor: pointer;
  overflow: visible;
  transform: translate3d(0, 0, 0);
}

.player[playing]~.toast {
  bottom: 80px;
}

.toast:after {
  display: inline-block;
  width: 100%;
  height: 100%;
  border-radius: 5px;
  opacity: 0;
  transition: opacity var(--animate-150, 150ms) cubic-bezier(.33, .17, .85, 1.1);
  box-shadow: 0 8px 10px 1px rgba(0, 0, 0, .14), 0 3px 14px 2px rgba(0, 0, 0, .12), 0 5px 5px -3px rgba(0, 0, 0, .4);
  content: ' ';
  position: absolute;
  top: 0;
  left: 0;
}

.toast:hover:after {
  opacity: 1;
}

.toast>* {
  pointer-events: none;
}

.toast .yellow-text {
  color: yellow;
}

.flex-row {
  display: flex;
  flex-direction: row;
}

.small-button {
  padding: 0.5em;
  cursor: pointer;
  overflow: hidden;
  position: relative;
  border-radius: 50%;
  transform: translate3d(0, 0, 0);
  border: none;
  background: none;
  color: inherit;
  width: 36px;
}

.small-button[disabled] {
  color: var(--disabled-color);
  cursor: default;
}

.small-button>* {
  pointer-events: none;
}

.to-top {
  position: fixed;
  bottom: 10px;
  left: 50%;
  transform: translateX(-50%);
  animation: show-it var(--animate-150, 150ms) linear forwards;
  transition: transform var(--animate-150, 150ms) linear;
}

.hidden {
  animation: hide-it var(--animate-150, 150ms) linear forwards;
}

.player[playing]~.to-top {
  transform: translateY(-70px) translateX(-50%);
}

@keyframes hide-it {
  from {
    display: block;
    opacity: 1
  }

  to {
    display: none;
    opacity: 0;
  }
}

@keyframes show-it {
  from {
    display: none;
    opacity: 0;
  }

  to {
    display: block;
    opacity: 1
  }
}

